New Crowdin updates (#1839)
* New translations en-US.json (Turkish)

* New translations en-US.json (Turkish)

* New translations en-US.json (Turkish)

* New translations en-US.json (Turkish)

* New translations en-US.json (Turkish)

* New translations en-US.json (fr-FR)

* New translations en-US.json (ru-RU)

* New translations en-US.json (id-ID)

* New translations en-US.json (Portuguese, Brazilian)

* New translations en-US.json (zh-Hant)

* New translations en-US.json (zh-Hans)

* New translations en-US.json (Turkish)

* New translations en-US.json (Slovak)

* New translations en-US.json (Dutch)

* New translations en-US.json (Spanish)

* New translations en-US.json (ko-KR)

* New translations en-US.json (ja-JP)

* New translations en-US.json (Italian)

* New translations en-US.json (Greek)

* New translations en-US.json (de-DE)

* New translations en-US.json (Czech)

* New translations en-US.json (Croatian)

* New translations en-US.json (Turkish)

* New translations en-US.json (Dutch)

* New translations en-US.json (fr-FR)

* New translations en-US.json (Spanish)

* New translations en-US.json (de-DE)

--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -500,6 +500,9 @@
   "wallet.delegation.transaction.success.button.label": "Übersichtsseite",
   "wallet.delegation.transaction.success.explanation": "In der Übersichtsseite kannst Du den Status des Stake pools verfolgen, und die verbleibende Zeit, um eine Belohnung zu erhalten",
   "wallet.delegation.transaction.success.title": "Erfolgreich delegiert",
+  "wallet.voting.transaction.success.title": "Erfolgreich registriert",
+  "wallet.voting.transaction.success.button.label": "Übersichtsseite",
+  "wallet.voting.transaction.success.explanation": "Explainer TODO",
   "wallet.deprecation.byronLine1": "Das Shelley Protokoll upgrade bringt einen neuen Shelley wallet Typ, welcher Delegierungen ermöglicht.",
   "wallet.deprecation.byronLine2": "Um Deine {ticker} zu delegieren, musst Du auf eine Shelley Wallet upgraden.",
   "wallet.hw.common.error.101": "Notwendige Berechtigungen wurden vom Benutzer nicht erteilt. Bitte erneut versuchen.",
