--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -500,6 +500,9 @@
   "wallet.delegation.transaction.success.button.label": "Tableau de bord",
   "wallet.delegation.transaction.success.explanation": "Suivre l'état du groupe d'enjeu (pool) et le temps restant pour recevoir une récompense à partir de la page du tableau de bord.",
   "wallet.delegation.transaction.success.title": "Délégation réussie",
+  "wallet.voting.transaction.success.title": "Enregistrement réussi",
+  "wallet.voting.transaction.success.button.label": "Tableau de bord",
+  "wallet.voting.transaction.success.explanation": "Explication TODO",
   "wallet.deprecation.byronLine1": "La mise à jour du protocole Shelley ajoute un nouveau type de portefeuille Shelley qui permet la délégation.",
   "wallet.deprecation.byronLine2": "Pour déléguer vos {ticker}, vous devrez passer à un portefeuille Shelley.",
   "wallet.hw.common.error.101": "Les autorisations nécessaires n'ont pas été fournies par l'utilisateur. Veuillez réessayer.",
