--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -186,10 +186,10 @@
   "profile.nightly.warning2": "Gönderdiğiniz tüm işlemler zincir bloğu ve üretim sunucularında görülebilir.",
   "profile.nightly.warningHeader": "Bir üretim ortamını simüle etmek için:",
   "profile.privacypolicy.header": "Yoroi...",
-  "profile.privacypolicy.neverAnalytics": "<strong>Never</strong> herhangi analitik bir yazılımı veya üçüncü parti izleyicileri çalıştırır.",
-  "profile.privacypolicy.neverProfile": "<strong>Never</strong> bilgilerinizle profil oluşturur.",
-  "profile.privacypolicy.neverSell": "<strong>Never</strong> datanızı satar.",
-  "profile.privacypolicy.neverTrack": "<strong>Never</strong> hareketlerinizi takip eder.",
+  "profile.privacypolicy.neverAnalytics": "Herhangi bir analiz veya 3. parti izleme izleme yazılımları <strong>Asla</strong> çalıştırmaz.",
+  "profile.privacypolicy.neverProfile": "Bilgilerinizle <strong>Asla</strong> profil oluşturmaz.",
+  "profile.privacypolicy.neverSell": "Bilgilerinizi <strong>Asla</strong> satmaz.",
+  "profile.privacypolicy.neverTrack": "Davranış ve işlemlerinizi <strong>Asla</strong> takip etmez.",
   "profile.privacypolicy.serverLogs": "Herhangi bir sunucu kaydı yalnızca sunucu sorunlarını gidermek amacıyla en fazla 2 hafta saklanır.",
   "profile.termsOfUse.checkboxLabel": "Kullanım şartlarını kabul ediyorum",
   "profile.termsOfUse.title": "Kullanım Şartları",
@@ -223,7 +223,7 @@
   "settings.general.aboutYoroi.website": "Yoroi web sitesi",
   "settings.general.aboutYoroi.youtube": "EMURGO YouTube",
   "settings.general.explorer": "Blockchain Gezgini",
-  "settings.general.languageSelect.info": "EMURGO için Yoroi'deki dostluk önemli bir konudur. Anadilinizde blokzincir kavramlarını anlamanın daha kolay olduğuna inanıyoruz. Mümkün olduğunca çok dili desteklemeye çalışıyoruz ancak daha geniş bir dil yelpazesi için yerel çevirmenlerinin yardımını kabul etmeliyiz. Seçilen dildeki çeviri bu çevirmenler tarafından eksiksiz bir şekilde gerçekleştirilir.",
+  "settings.general.languageSelect.info": "EMURGO için Yoroi'de ki dostluk önemli bir konudur. Ana diliniz de blokzincir kavramlarını anlamanın daha kolay olduğuna inanıyoruz. Mümkün olduğunca çok dili desteklemeye çalışıyoruz ancak daha geniş bir dil yelpazesi için yerel çevirmenlerinin yardımını kabul etmeliyiz. Seçilen dilde ki çeviri bu çevirmenler tarafından eksiksiz bir şekilde gerçekleştirilir.",
   "settings.general.languageSelect.labelInfo": "Seçilen dil çevirisi topluluk tarafından eksiksiz bir şekilde sağlanır",
   "settings.general.translation.acknowledgment": "Katkılarından dolayı aşağıdakilere teşekkür ederiz: ",
   "settings.general.translation.contributors": "_",
@@ -500,6 +500,9 @@
   "wallet.delegation.transaction.success.button.label": "Panel sayfası",
   "wallet.delegation.transaction.success.explanation": "Bahis havuzunun durumunu ve Gösterge Tablosu sayfasından bir ödül almak için kalan süreyi izleyiniz",
   "wallet.delegation.transaction.success.title": "Başarıyla yetkilendirildi",
+  "wallet.voting.transaction.success.title": "Başarıyla Kaydedildi",
+  "wallet.voting.transaction.success.button.label": "Panel sayfası",
+  "wallet.voting.transaction.success.explanation": "Explainer TODO",
   "wallet.deprecation.byronLine1": "Shelley protokol yükseltmesi, temsilciliği destekleyen yeni bir Shelley cüzdan türü ekler.",
   "wallet.deprecation.byronLine2": "To delegate your {ticker} you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "Kullanıcı tarafından gerekli izinler verilmedi. Lütfen tekrar deneyiniz.",
