--- a/app/i18n/locales/hr-HR.json
+++ b/app/i18n/locales/hr-HR.json
@@ -475,8 +475,7 @@
   "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "make a transaction",
   "wallet.dashboard.summary.note": "Less than you expected?",
-  "wallet.dashboard.summary.adaAmountNote1": "This balance includes rewards",
-  "wallet.dashboard.summary.adaAmountNote2": "(withdrawal required to be able to send this full amount)",
+  "wallet.dashboard.summary.adaAmountNote": "This balance includes rewards (withdrawal required to be able to send this full amount)",
   "wallet.dashboard.summary.rewardsTitle": "Total Rewards",
   "wallet.dashboard.summary.title": "Your Summary",
   "wallet.dashboard.upcomingRewards.at": "at",
