--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -475,8 +475,7 @@
   "wallet.dashboard.summary.mangled.line2": "Nós recomendamos {transactionMessage} para delegar a {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "fazer uma transação",
   "wallet.dashboard.summary.note": "Menos do que o esperado?",
-  "wallet.dashboard.summary.adaAmountNote1": "Este saldo inclui suas recompensas",
-  "wallet.dashboard.summary.adaAmountNote2": "(saque necessário para conseguir enviar este saldo total)",
+  "wallet.dashboard.summary.adaAmountNote": "This balance includes rewards (withdrawal required to be able to send this full amount)",
   "wallet.dashboard.summary.rewardsTitle": "Total de recompensas",
   "wallet.dashboard.summary.title": "Seu Resumo",
   "wallet.dashboard.upcomingRewards.at": "às",
@@ -500,9 +499,9 @@
   "wallet.delegation.transaction.success.button.label": "Página do painel",
   "wallet.delegation.transaction.success.explanation": "Acompanhe o status do stake pool e o tempo restante para receber uma recompensa na página do Painel",
   "wallet.delegation.transaction.success.title": "Delegado com sucesso",
-  "wallet.voting.transaction.success.title": "Successfully Registered",
+  "wallet.voting.transaction.success.title": "Registrado com sucesso",
   "wallet.voting.transaction.success.button.label": "Página do painel",
-  "wallet.voting.transaction.success.explanation": "Explainer TODO",
+  "wallet.voting.transaction.success.explanation": "Explicador para fazer",
   "wallet.deprecation.byronLine1": "A atualização do protocolo Shelley adiciona um novo tipo de carteira Shelley que suporta delegação.",
   "wallet.deprecation.byronLine2": "Para delegar sua {ticker} você precisará atualizar para uma carteira Shelley.",
   "wallet.hw.common.error.101": "As permissões necessárias não foram concedidas pelo usuário. Por favor tente novamente.",
