New Crowdin updates (#1873)

--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -8,6 +8,7 @@
   "api.errors.WalletAlreadyImportedError": "Le wallet que vous essayez d'importer existe déjà.",
   "api.errors.WalletAlreadyRestoredError": "Le wallet que vous essayez de restaurer existe déjà.",
   "api.errors.WalletFileImportError": "Le wallet n'a pas pu être importé. Veuillez vérifier que vous avez fourni le bon fichier.",
+  "api.errors.assetInfoApiError": "Erreur reçue du serveur lors de l'obtention d'informations sur les actifs.",
   "api.errors.checkAdressesInUseApiError": "Erreur reçue du serveur lors du contrôle des adresses.",
   "api.errors.currentCoinPriceError": "Le cours actuel de ce jeton n'est pas disponible en ce moment.",
   "api.errors.discoverAddressesError": "Erreur reçue de l'API durant la recherche des adresses.",
@@ -82,12 +83,14 @@
   "global.label.choose": "Choisir",
   "global.labels.LearnMore": "En savoir plus",
   "global.labels.addMemo": "Ajouter un mémo",
+  "global.labels.amount": "Montant",
   "global.labels.back": "Retour",
   "global.labels.cancel": "Annuler",
   "global.labels.change": "Modifier",
   "global.labels.confirm": "Confirmer",
   "global.labels.continue": "Continuer",
   "global.labels.create": "Créer",
+  "global.labels.current": "En cours",
   "global.labels.delegate": "Déléguer",
   "global.labels.deleteMemo": "Supprimer un mémo",
   "global.labels.editMemo": "Éditer un mémo",
@@ -95,13 +98,16 @@
   "global.labels.error": "Erreur",
   "global.labels.finish": "Finir",
   "global.labels.goBack": "Retour",
+  "global.labels.id": "ID",
   "global.labels.keyRegistrationPointer": "Pointeur d'enregistrement de clé",
   "global.labels.loadMore": "En charger plus",
   "global.labels.memo": "Mémo",
+  "global.labels.name": "Nom",
   "global.labels.next": "Suivant",
   "global.labels.note": "Note:",
   "global.labels.optionalMemo": "Mémo (optionnel)",
   "global.labels.processing": "Processing...",
+  "global.labels.register": "Enregistrer",
   "global.labels.remove": "Enlever",
   "global.labels.rewardsLabel": "Récompenses",
   "global.labels.save": "Sauvegarder",
@@ -111,7 +117,6 @@
   "global.labels.stakingKey": "Clé de Staking",
   "global.labels.stakingKeyHash": "Hash de la clé de staking",
   "global.labels.upgrade": "Mettre à jour",
-  "global.labels.current": "En cours",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
   "global.language.dutch": "Nederlands",
@@ -127,6 +132,7 @@
   "global.language.spanish": "Español",
   "global.language.turkish": "Turc",
   "global.passwordInstructionsPaperWallet": "Remarque : le mot de passe du Wallet Papier doit contenir au moins <strong>10 caractères</strong>.",
+  "global.selectAsset.labael": "Sélectionner un actif",
   "global.staleTxnWarningLine1": "Votre wallet a changé depuis que vous avez créé cette transaction.",
   "global.staleTxnWarningLine2": "Vous pouvez toujours envoyer cette transaction, mais elle pourrait échouer.",
   "global.uriExplanation": "Ceux-ci vous permettent de partager facilement vos factures avec vos amis et entreprises en cliquant simplement sur une URL.",
@@ -144,7 +150,6 @@
   "maintenance.screen.title": "Maintenance Temporaire",
   "myWallets.wallets.lastSyncText": "Dernière synchronisation",
   "myWallets.wallets.neverSync": "Jamais synchronisé",
-  "myWallets.wallets.sumInfoText": "Solde total",
   "networkError.label.message": "Avertissement : La connexion au serveur a échoué.<br>Veuillez vérifier votre connexion internet ou <a target='blank' href='https://twitter.com/YoroiWallet'>notre compte Twitter</a>.<br>Le solde affiché ainsi que l'historique des transactions peuvent apparaître erronés jusqu'à ce que la situation sur nos serveurs revienne à la normale, mais votre solde réel n'est pas affecté.",
   "nightly.banner.label.message": "VOUS ÊTES SUR YOROI NIGHTLY.",
   "noticeBoard.noNoticeText.chooseAPool": "Pour voir les notifications ici, commencez par <strong>choisir un groupe d'enjeu</strong> et déléguez vos {ticker}.",
@@ -325,10 +330,10 @@
   "uri.generate.dialog.confirm.label": "Générer",
   "uri.generate.dialog.title": "Générer une URL",
   "uri.invalid.dialog.title": "URL invalide",
-  "uri.invalid.dialog.warning.text1": "Le lien sur lequel vous avez cliqué est invalide.",
-  "uri.invalid.dialog.warning.text2": "Veuillez demander au destinataire de bien vérifier le format.",
   "uri.invalid.dialog.warning.invalidAddressText1": "Je ne trouve pas de wallet qui accepte ce type d'adresse.",
   "uri.invalid.dialog.warning.invalidAddressText2": "Veuillez demander au destinataire de vérifier l'adresse et assurez-vous que vous avez au moins un wallet qui accepte ce type d'adresse.",
+  "uri.invalid.dialog.warning.text1": "Le lien sur lequel vous avez cliqué est invalide.",
+  "uri.invalid.dialog.warning.text2": "Veuillez demander au destinataire de bien vérifier le format.",
   "uri.landing.dialog.confirm.label": "J'ai compris",
   "uri.landing.dialog.title": "Effectuer une transaction à partir d'une URL Cardano",
   "uri.landing.dialog.warning.line1": "Assurez vous que :",
@@ -467,6 +472,7 @@
   "wallet.dashboard.stakePool.stake": "Enjeu",
   "wallet.dashboard.stakePool.title": "Stake Pool délégué",
   "wallet.dashboard.stakePool.viewWebpage": "Voir la page web du groupe d'enjeu",
+  "wallet.dashboard.summary.adaAmountNote": "Ce solde comprend les récompenses (un retrait est nécessaire pour pouvoir envoyer la totalité de ce montant)",
   "wallet.dashboard.summary.adaTitle": "Total {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "Total Délégué",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} peuvent être corrigés",
@@ -475,14 +481,13 @@
   "wallet.dashboard.summary.mangled.line2": "Nous recommandons de {transactionMessage} pour déléguer vos {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "faire une transaction",
   "wallet.dashboard.summary.note": "Moins que ce que vous aviez prévu ?",
-  "wallet.dashboard.summary.adaAmountNote": "This balance includes rewards (withdrawal required to be able to send this full amount)",
   "wallet.dashboard.summary.rewardsTitle": "Total des Récompenses",
   "wallet.dashboard.summary.title": "Votre Synthèse",
   "wallet.dashboard.upcomingRewards.at": "à",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "Stake Pool délégué",
   "wallet.dashboard.upcomingRewards.endOfEpoch": "Fin de l'époque",
   "wallet.dashboard.upcomingRewards.noRewards": "aucune récompense ne sera gagnée pour cette époque",
   "wallet.dashboard.upcomingRewards.title": "Récompenses à venir",
-  "wallet.dashboard.upcomingRewards.delegatedTitle": "Stake Pool délégué",
   "wallet.dashboard.warning.pendingTx": "Les informations du tableau de d'enjeu (staking) seront mises à jour une fois que votre transaction en cours sera confirmée",
   "wallet.debugwallet.explanation1": "Le portefeuille que vous avez sélectionné ({checksumTextPart}) est destiné aux tests et au débogage.",
   "wallet.debugwallet.explanation2": "Pour éviter tout problème, n'utilisez pas ce portefeuille.<br />Utilisez plutôt Yoroi pour créer un nouveau portefeuille.",
@@ -499,9 +504,6 @@
   "wallet.delegation.transaction.success.button.label": "Tableau de bord",
   "wallet.delegation.transaction.success.explanation": "Suivre l'état du groupe d'enjeu (pool) et le temps restant pour recevoir une récompense à partir de la page du tableau de bord.",
   "wallet.delegation.transaction.success.title": "Délégation réussie",
-  "wallet.voting.transaction.success.title": "Enregistrement réussi",
-  "wallet.voting.transaction.success.button.label": "Tableau de bord",
-  "wallet.voting.transaction.success.explanation": "Explication TODO",
   "wallet.deprecation.byronLine1": "La mise à jour du protocole Shelley ajoute un nouveau type de portefeuille Shelley qui permet la délégation.",
   "wallet.deprecation.byronLine2": "Pour déléguer vos {ticker}, vous devrez passer à un portefeuille Shelley.",
   "wallet.hw.common.error.101": "Les autorisations nécessaires n'ont pas été fournies par l'utilisateur. Veuillez réessayer.",
@@ -722,6 +724,9 @@
   "wallet.undelegation.transaction.explanationLine2": "Cela prendra 2 époques après la fin de l'époque courante pour que votre choix d'arrêter de déléguer soit effectif",
   "wallet.unsupported.subtitle": "Le portefeuille sélectionné ne prend pas en charge cette fonctionnalité",
   "wallet.unsupported.title": "Type de portefeuille non supporté",
+  "wallet.voting.transaction.success.button.label": "Tableau de bord",
+  "wallet.voting.transaction.success.explanation": "Explication TODO",
+  "wallet.voting.transaction.success.title": "Enregistrement réussi",
   "wallet.withdrawal.transaction.unregister": "Cette opération va désinscrire une ou plusieurs clés de staking, ce qui vous permettra de récupérer votre dépôt de {refundAmount} {ticker}",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copier dans le presse-papier",
   "widgets.explorer.tooltip": "Aller sur {websiteName}",
