New Crowdin updates (#1880)

--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -8,7 +8,7 @@
   "api.errors.WalletAlreadyImportedError": "İçeri aktarmaya çalıştığınız cüzdan zaten mevcut.",
   "api.errors.WalletAlreadyRestoredError": "Yeniden yüklemeye çalıştığınız cüzdan zaten mevcut.",
   "api.errors.WalletFileImportError": "Cüzdan içeri aktarılamadı. Lütfen doğru dosyayı girdiğinizden emin olun.",
-  "api.errors.assetInfoApiError": "Error received from server while getting asset info.",
+  "api.errors.assetInfoApiError": "Varlık bilgisi alınırken sunucudan hata alındı.",
   "api.errors.checkAdressesInUseApiError": "Kullanılan adresler kontrol edilirken sunucudan hata alındı.",
   "api.errors.currentCoinPriceError": "Geçerli kripto para fiyat verileri şu anda mevcut değil.",
   "api.errors.discoverAddressesError": "Adresler keşfedilirken API çağrı yönteminden hata alındı.",
@@ -132,11 +132,13 @@
   "global.language.spanish": "Español",
   "global.language.turkish": "Türkçe",
   "global.passwordInstructionsPaperWallet": "Not: Kağıt Cüzdan şifreniz en az <strong>10 karakter</strong> uzunluğunda olması gerekir.",
-  "global.selectAsset.labael": "Select asset",
+  "global.selectAsset.labael": "Varlık seç",
+  "global.publicKey.explanation": "Public keys allow seeing the wallet history for the wallet, but does <strong>not</strong> allow to spend or move the funds in any way (private key is <strong>not</strong> included)",
   "global.staleTxnWarningLine1": "Bu işlemi oluşturduğunuz için cüzdanınız değişti.",
   "global.staleTxnWarningLine2": "Bu işlemi hala gönderebilirsiniz ancak başarısız olabilir.",
   "global.uriExplanation": "Bunlar, yalnızca bir URL'yi tıklayarak faturaları arkadaşlarınızla ve işletmelerinizle kolayca paylaşmanıza olanak tanır.",
   "global.uriSchemeTitleLabel": "Cardano Ödeme Adresleri",
+  "global.why": "This can be used to:",
   "global.wrongNetwork.address": "Adres için yanlış ağ.",
   "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
   "incorrectTime.line2": "Zaman farkı:",
@@ -191,7 +193,7 @@
   "profile.nightly.warning2": "Gönderdiğiniz tüm işlemler zincir bloğu ve üretim sunucularında görülebilir.",
   "profile.nightly.warningHeader": "Bir üretim ortamını simüle etmek için:",
   "profile.privacypolicy.header": "Yoroi...",
-  "profile.privacypolicy.neverAnalytics": "Herhangi bir analiz veya 3. parti izleme izleme yazılımları <strong>Asla</strong> çalıştırmaz.",
+  "profile.privacypolicy.neverAnalytics": "Herhangi bir analiz veya 3. parti takip yazılımları <strong>Asla</strong> çalıştırmaz.",
   "profile.privacypolicy.neverProfile": "Bilgilerinizle <strong>Asla</strong> profil oluşturmaz.",
   "profile.privacypolicy.neverSell": "Bilgilerinizi <strong>Asla</strong> satmaz.",
   "profile.privacypolicy.neverTrack": "Davranış ve işlemlerinizi <strong>Asla</strong> takip etmez.",
@@ -515,7 +517,6 @@
   "wallet.hw.ledger.common.error.104": "Ledger aygıtı zaman aşımı, tekrar deneyin.",
   "wallet.hw.ledger.common.error.105": "Ağ hatası. Lütfen internet bağlantınızı kontrol edin.",
   "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
-  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
   "wallet.includeKey.withKeyLabel": "Anahtarla",
   "wallet.includeKey.withoutKeyLabel": "Anahtarsız",
   "wallet.nav.addButton": "Yeni cüzdan ekle",
@@ -639,8 +640,13 @@
   "wallet.settings.changePassword.dialog.title.changePassword": "Harcama şifresini değiştir",
   "wallet.settings.delete.accept": "Hala bu cüzdanı geri getirme imkanım var",
   "wallet.settings.delete.warning2": "Lütfen bu cüzdana erişimi geri yükleme imkanlarına sahip olduğunuzu tekrar kontrol edin. Yapamazsanız, cüzdanı çıkarmak geri dönüşü olmayan para kaybına neden olabilir.",
+  "wallet.settings.export.explanation": "This can be used to transfer a wallet between devices.",
+  "wallet.settings.export.label": "Cüzdanı dışarı aktar",
   "wallet.settings.name.label": "Cüzdan adı",
   "wallet.settings.passwordLastUpdated": "Son güncelleme {lastUpdated}",
+  "wallet.settings.publicExport.explanationLine1": "The below you can find your wallet's <strong>public</strong> key information.",
+  "wallet.settings.publicExport.reason1": "Open your wallet in read-only mode in Yoroi Mobile to easily check your balance at any time",
+  "wallet.settings.publicExport.reason2": "Share your key with tax software to automatically generate tax reports",
   "wallet.settings.remove.explanation": "Bir cüzdanın çıkarılması, cüzdan dengesini etkilemez. Cüzdanınız istediğiniz zaman tekrar geri yüklenebilir.",
   "wallet.settings.remove.label": "Cüzdanı sil",
   "wallet.settings.resync.buttonLabel": "Yeniden senkronize edilmiş cüzdan",
