--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -133,10 +133,12 @@
   "global.language.turkish": "Turkish",
   "global.passwordInstructionsPaperWallet": "Nota: La contraseña de la Billetera de Papel debe ser de al menos <strong>10 caracteres</strong> de longitud.",
   "global.selectAsset.labael": "Seleccionar activo",
+  "global.publicKey.explanation": "Las llaves públicas permiten ver el historial de la billetera, pero <strong>no</strong> permite gastar o mover los fondos de ninguna manera (la llave privada <strong>no está</strong> incluida)",
   "global.staleTxnWarningLine1": "Tu billetera ha cambiado desde que creaste esta transacción.",
   "global.staleTxnWarningLine2": "Aún puedes enviar esta transacción, pero puede fallar.",
   "global.uriExplanation": "Permiten compartir fácilmente facturas con amigos y empresas, con sólo hacer clic en una URL.",
   "global.uriSchemeTitleLabel": "URLs de Pago de Cardano",
+  "global.why": "Esto se puede utilizar para:",
   "global.wrongNetwork.address": "Red errónea para esa dirección.",
   "incorrectTime.line1": "ADVERTENCIA: La hora de tu ordenador no coincide con la del servidor. Esto puede causar resultados inesperados",
   "incorrectTime.line2": "Diferencia de tiempo:",
@@ -515,7 +517,6 @@
   "wallet.hw.ledger.common.error.104": "Tiempo de espera del dispositivo Ledger agotado. Por favor, inténtalo nuevamente.",
   "wallet.hw.ledger.common.error.105": "Error de red. Por favor, comprueba tu conexión a Internet.",
   "wallet.includeKey.explanationLine1": "¿Quieres incluir la clave <strong>pública</strong> de tu billetera en los registros de errores?",
-  "wallet.includeKey.explanationLine2": "Permitirá al personal de soporte ver el historial de transacciones de tu billetera, pero <strong>no</strong> podrá gastar o mover tus fondos de ninguna manera (la clave privada <strong>no</strong> está incluida)",
   "wallet.includeKey.withKeyLabel": "Con la clave",
   "wallet.includeKey.withoutKeyLabel": "Sin la clave",
   "wallet.nav.addButton": "Añadir billetera",
@@ -639,8 +640,13 @@
   "wallet.settings.changePassword.dialog.title.changePassword": "Cambiar contraseña de gastos",
   "wallet.settings.delete.accept": "Aún conozco la forma y tengo los medios para restaurar esta billetera",
   "wallet.settings.delete.warning2": "Por favor, comprueba que todavía tienes los medios para restaurar el acceso a esta billetera. Si no puedes, eliminar la billetera puede resultar en una pérdida irreversible de los fondos.",
+  "wallet.settings.export.explanation": "Esto puede ser utilizado para transferir una billetera entre dispositivos.",
+  "wallet.settings.export.label": "Exportar billetera",
   "wallet.settings.name.label": "Nombre de la billetera",
   "wallet.settings.passwordLastUpdated": "Última actualización {lastUpdated}",
+  "wallet.settings.publicExport.explanationLine1": "A continuación puede encontrar la información de clave <strong>pública </strong>de su billetera.",
+  "wallet.settings.publicExport.reason1": "Abre tu billetera en modo de sólo lectura en Yoroi Mobile para comprobar fácilmente tu saldo en cualquier momento",
+  "wallet.settings.publicExport.reason2": "Comparte tu llave con un software de impuestos para generar automáticamente informes de impuestos",
   "wallet.settings.remove.explanation": "Eliminar una billetera no afecta el saldo de la misma. Tu billetera puede ser restaurada de nuevo en cualquier momento.",
   "wallet.settings.remove.label": "Eliminar billetera",
   "wallet.settings.resync.buttonLabel": "Resincronizar la billetera",
