New Crowdin updates (#1882)
* New translations en-US.json (fr-FR)

* New translations en-US.json (fr-FR)

* New translations en-US.json (fr-FR)

* New translations en-US.md (Turkish)

* New translations en-US.json (de-DE)

* New translations en-US.json (de-DE)

--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -30,7 +30,7 @@
   "api.errors.histoicalCoinPriceError": "L'historique du cours de ce jeton n'est pas disponible en ce moment.",
   "api.errors.invalidMnemonicError": "do not translate",
   "api.errors.invalidWitnessError": "La signature n’est pas valide.",
-  "api.errors.noInputsError": "Le wallet restauré à partir de votre phrase de secours est vide. Veuillez vérifier votre phrase de secours and retenter de restaurer le wallet.",
+  "api.errors.noInputsError": "Le wallet restauré à partir de votre phrase de secours est vide. Veuillez vérifier votre phrase de secours et tentez de restaurer le wallet à nouveau.",
   "api.errors.noOutputsError": "La transaction nécessite au moins une sortie, mais aucune sortie n'a été ajoutée",
   "api.errors.pendingTransactionError": "Erreur lors de la mise à jour des transactions en cours.",
   "api.errors.poolMissingApiError": "Nous n'avons pas pu trouver ce groupe d'enjeu. Veuillez vérifier l'identifiant (ID) et assurez-vous qu'il ne s'est pas désinscrit.",
@@ -133,12 +133,12 @@
   "global.language.turkish": "Turc",
   "global.passwordInstructionsPaperWallet": "Remarque : le mot de passe du Wallet Papier doit contenir au moins <strong>10 caractères</strong>.",
   "global.selectAsset.labael": "Sélectionner un actif",
-  "global.publicKey.explanation": "Public keys allow seeing the wallet history for the wallet, but does <strong>not</strong> allow to spend or move the funds in any way (private key is <strong>not</strong> included)",
+  "global.publicKey.explanation": "Les clés publiques permettent de voir l'historique du wallet, mais <strong>ne permettent pas</strong> de dépenser ou de déplacer les fonds d'aucune manière (la clé privée <strong>n'est pas</strong> incluse)",
   "global.staleTxnWarningLine1": "Votre wallet a changé depuis que vous avez créé cette transaction.",
   "global.staleTxnWarningLine2": "Vous pouvez toujours envoyer cette transaction, mais elle pourrait échouer.",
   "global.uriExplanation": "Ceux-ci vous permettent de partager facilement vos factures avec vos amis et entreprises en cliquant simplement sur une URL.",
   "global.uriSchemeTitleLabel": "URLs de Paiement Cardano",
-  "global.why": "This can be used to:",
+  "global.why": "Cela peut être utilisé pour :",
   "global.wrongNetwork.address": "Réseau incorrect pour l'adresse.",
   "incorrectTime.line1": "ATTENTION : l'heure sur votre ordinateur ne correspond pas à celle de notre serveur. Cela peut entraîner des résultats inattendus",
   "incorrectTime.line2": "Différence de temps :",
@@ -640,13 +640,13 @@
   "wallet.settings.changePassword.dialog.title.changePassword": "Changer votre mot de passe de paiement",
   "wallet.settings.delete.accept": "J'ai encore les moyens de restaurer ce wallet",
   "wallet.settings.delete.warning2": "Veuillez vérifier que vous avez encore les moyens de rétablir l'accès à ce wallet. Si vous ne le pouvez pas, le retrait du wallet peut entraîner une perte irréversible de fonds.",
-  "wallet.settings.export.explanation": "This can be used to transfer a wallet between devices.",
-  "wallet.settings.export.label": "Export wallet",
+  "wallet.settings.export.explanation": "Ceci peut être utilisé pour transférer un wallet d'un appareil à l'autre.",
+  "wallet.settings.export.label": "Exporter wallet",
   "wallet.settings.name.label": "Nom du Wallet",
   "wallet.settings.passwordLastUpdated": "Dernière mise à jour {lastUpdated}",
-  "wallet.settings.publicExport.explanationLine1": "The below you can find your wallet's <strong>public</strong> key information.",
-  "wallet.settings.publicExport.reason1": "Open your wallet in read-only mode in Yoroi Mobile to easily check your balance at any time",
-  "wallet.settings.publicExport.reason2": "Share your key with tax software to automatically generate tax reports",
+  "wallet.settings.publicExport.explanationLine1": "Vous trouverez ci-dessous les informations relatives à la clé <strong>publique</strong> de votre wallet.",
+  "wallet.settings.publicExport.reason1": "Ouvrez votre wallet en mode lecture seule dans Yoroi Mobile pour vérifier facilement votre solde à tout moment",
+  "wallet.settings.publicExport.reason2": "Partagez votre clé avec un logiciel fiscal pour générer automatiquement des rapports fiscaux",
   "wallet.settings.remove.explanation": "Supprimer un wallet n'affecte pas son solde. Votre wallet peut être reconstitué à tout moment.",
   "wallet.settings.remove.label": "Supprimer le wallet",
   "wallet.settings.resync.buttonLabel": "Resynchroniser le portefeuille",
