--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -8,7 +8,7 @@
   "api.errors.WalletAlreadyImportedError": "您要导入的钱包已存在。",
   "api.errors.WalletAlreadyRestoredError": "您要恢复的钱包已存在。",
   "api.errors.WalletFileImportError": "钱包无法导入，请确保您提供的文件正确无误。",
-  "api.errors.assetInfoApiError": "Error received from server while getting asset info.",
+  "api.errors.assetInfoApiError": "获取资产信息时从服务器收到错误。",
   "api.errors.checkAdressesInUseApiError": "在检查使用的地址时从服务器收到错误。",
   "api.errors.currentCoinPriceError": "暂无当前币价。",
   "api.errors.discoverAddressesError": "从 api 方法调用查找地址时收到错误。",
@@ -83,7 +83,7 @@
   "global.label.choose": "选择",
   "global.labels.LearnMore": "了解更多",
   "global.labels.addMemo": "添加备注",
-  "global.labels.amount": "Amount",
+  "global.labels.amount": "金额",
   "global.labels.back": "返回",
   "global.labels.cancel": "取消",
   "global.labels.change": "更改",
@@ -102,12 +102,12 @@
   "global.labels.keyRegistrationPointer": "密钥注册指针",
   "global.labels.loadMore": "加载更多",
   "global.labels.memo": "备注",
-  "global.labels.name": "Name",
+  "global.labels.name": "名称",
   "global.labels.next": "下一步",
   "global.labels.note": "注意：",
   "global.labels.optionalMemo": "备注（可选）",
   "global.labels.processing": "处理中...",
-  "global.labels.register": "Register",
+  "global.labels.register": "注册",
   "global.labels.remove": "移除",
   "global.labels.rewardsLabel": "奖励",
   "global.labels.save": "保存",
@@ -132,15 +132,15 @@
   "global.language.spanish": "Español",
   "global.language.turkish": "Turkish",
   "global.passwordInstructionsPaperWallet": "注意: 纸钱包密码长度至少为<strong>10个字符</strong>。",
-  "global.selectAsset.labael": "Select asset",
+  "global.selectAsset.labael": "选择资产",
   "global.publicKey.explanation": "Public keys allow seeing the wallet history for the wallet, but does <strong>not</strong> allow to spend or move the funds in any way (private key is <strong>not</strong> included)",
   "global.staleTxnWarningLine1": "钱包自您创建此交易后已有变动。",
   "global.staleTxnWarningLine2": "您仍可以发送此交易但可能失败。",
   "global.uriExplanation": "这些功能使您只需单击URL，即可轻松与朋友和企业共享发票。",
   "global.uriSchemeTitleLabel": "Cardano付款网址",
   "global.why": "This can be used to:",
-  "global.wrongNetwork.address": "Wrong network for address.",
-  "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
+  "global.wrongNetwork.address": "地址错误。",
+  "incorrectTime.line1": "警告：您计算机的时间和服务器时间不匹配。这可能会导致无法意料的结果。",
   "incorrectTime.line2": "时间差：",
   "incorrectTime.line3": "同步您的设备时间以解决此问题",
   "inline.editing.input.cancel.label": "取消",
@@ -448,7 +448,7 @@
   "wallet.dashboard.graph.singleEpochAxisLabel": "时代(1 天)",
   "wallet.dashboard.graphType.costs": "花费",
   "wallet.dashboard.graphType.positions": "位置",
-  "wallet.dashboard.lessthan.header": "有很多因素导致您获得的奖励少于您的预期。我们在这里列出一些常见的",
+  "wallet.dashboard.lessthan.header": "有很多因素导致您获得的奖励少于预期。我们在这里列出一些常见的原因：",
   "wallet.dashboard.lessthan.reason1": "您所授权的权益池曾经是或目前正处于脱机状态，因此没有生成块",
   "wallet.dashboard.lessthan.reason2": "自您委托以来，时间不足",
   "wallet.dashboard.lessthan.reason4": "您授权的权益池收取的固定费用大于池中总奖励",
@@ -474,18 +474,18 @@
   "wallet.dashboard.stakePool.stake": "权益",
   "wallet.dashboard.stakePool.title": "已委托的权益池",
   "wallet.dashboard.stakePool.viewWebpage": "查看权益池网站",
-  "wallet.dashboard.summary.adaAmountNote": "This balance includes rewards (withdrawal required to be able to send this full amount)",
+  "wallet.dashboard.summary.adaAmountNote": "该余额包含了奖励（赎回该奖励您的当前账户应有能力接受全部金额）",
   "wallet.dashboard.summary.adaTitle": "总{ticker}",
   "wallet.dashboard.summary.delegatedTitle": "委托总量",
-  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
-  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
+  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} 可以更正",
+  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} 无法更正",
   "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preference.",
   "wallet.dashboard.summary.mangled.line2": "我们推荐通过 {transactionMessage} 来委托{ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "进行一笔交易",
   "wallet.dashboard.summary.note": "比预期少",
   "wallet.dashboard.summary.rewardsTitle": "收益总量",
   "wallet.dashboard.summary.title": "你的总览",
-  "wallet.dashboard.upcomingRewards.at": "在...时",
+  "wallet.dashboard.upcomingRewards.at": "的",
   "wallet.dashboard.upcomingRewards.delegatedTitle": "已委托的权益池",
   "wallet.dashboard.upcomingRewards.endOfEpoch": "时代结束",
   "wallet.dashboard.upcomingRewards.noRewards": "当前时代将没有任何奖励",
@@ -641,12 +641,12 @@
   "wallet.settings.delete.accept": "我仍然可以恢复该钱包",
   "wallet.settings.delete.warning2": "请仔细检查您仍然可以恢复该钱包。否则，删除钱包可能会导致不可挽回的资金损失。",
   "wallet.settings.export.explanation": "This can be used to transfer a wallet between devices.",
-  "wallet.settings.export.label": "Export wallet",
+  "wallet.settings.export.label": "导出钱包",
   "wallet.settings.name.label": "钱包名称",
   "wallet.settings.passwordLastUpdated": "上次更新的 {lastUpdated}",
   "wallet.settings.publicExport.explanationLine1": "The below you can find your wallet's <strong>public</strong> key information.",
-  "wallet.settings.publicExport.reason1": "Open your wallet in read-only mode in Yoroi Mobile to easily check your balance at any time",
-  "wallet.settings.publicExport.reason2": "Share your key with tax software to automatically generate tax reports",
+  "wallet.settings.publicExport.reason1": "在Yoroi移动版中以只读模式打开钱包以便随时查看余额",
+  "wallet.settings.publicExport.reason2": "与税务软件分享您的密钥自动生成税务报告",
   "wallet.settings.remove.explanation": "删除钱包不会影响钱包余额。您的钱包可以随时恢复。",
   "wallet.settings.remove.label": "删除钱包",
   "wallet.settings.resync.buttonLabel": "重新同步钱包",
@@ -717,10 +717,10 @@
   "wallet.transfer.cards.shelley": "Shelly时期钱包",
   "wallet.transfer.deregister.deregister": "取消注册",
   "wallet.transfer.deregister.keep": "保持注册",
-  "wallet.transfer.deregister.line1": "提取奖励时，您还可以选择取消注册委托密钥。",
-  "wallet.transfer.deregister.line2": "取消注册委托密钥将退还您的押金，并从任何权益池中取消委托该密钥。",
-  "wallet.transfer.deregister.line3": "保持注册委托密钥将使您可以赎回奖励，但仍可继续保持委托到同一权益池中。",
-  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent back to the reserved",
+  "wallet.transfer.deregister.line1": "提取奖励时，您还可以选择是否取消委托密钥的注册以注销委托。",
+  "wallet.transfer.deregister.line2": "取消注册委托密钥将退还您的所有委托资金，并注销当前权益池的委托。",
+  "wallet.transfer.deregister.line3": "保持注册您可以赎回奖励的同时，仍继续保持委托到当前权益池中。",
+  "wallet.transfer.deregister.line4": "如果此委托密钥用作权益池的奖励帐户，您不应注销该委托，因为这将导致所有的权益池经营者奖励都被送回。",
   "wallet.transfer.deregister.line5": "取消注册委托密钥意味着在您重新注册委托密钥之前（通常通过再次委派到权益池中），此密钥将不再获得奖励。",
   "wallet.transfer.deregister.noNeedToDeregister": "您无需取消注册委托密钥即可委托给其他权益池。您可以随时更改您的委托。",
   "wallet.transfer.deregister.title": "同时取消注册委托密钥？",
