--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -713,6 +713,7 @@
   "wallet.transaction.type.multiparty": "{currency} multiparty transaction",
   "wallet.transaction.withdraw": "Withdraw",
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
+  "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transfer.cards.byron": "Byron-era wallet",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
   "wallet.transfer.deregister.deregister": "Deregister",
