--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -776,5 +776,6 @@
   "wallet.voting.dialog.confirmPin": "Confirm PIN",
   "wallet.voting.dialog.completeLabel": "Complete",
   "global.errors.pinDoesNotMatch": "Pin Does Not Match",
-  "global.errors.invalidPin": "Invalid Pin"
+  "global.errors.invalidPin": "Invalid Pin",
+  "button.buySellAda": "Buy/Sell ADA"
 }
