New Crowdin updates (#1890)
* New translations en-US.json (fr-FR)

* New translations en-US.json (Turkish)

* New translations en-US.json (Turkish)

* New translations en-US.json (Turkish)

* New translations en-US.json (zh-Hans)

* New translations en-US.json (ko-KR)

* New translations en-US.json (id-ID)

* New translations en-US.json (zh-Hant)

* New translations en-US.json (Turkish)

* New translations en-US.json (Slovak)

* New translations en-US.json (ru-RU)

* New translations en-US.json (Dutch)

* New translations en-US.json (ja-JP)

* New translations en-US.json (Portuguese, Brazilian)

* New translations en-US.json (Italian)

* New translations en-US.json (Greek)

* New translations en-US.json (de-DE)

* New translations en-US.json (Czech)

* New translations en-US.json (Spanish)

* New translations en-US.json (fr-FR)

* New translations en-US.json (Croatian)

* New translations en-US.json (Spanish)

* New translations en-US.json (Spanish)

* New translations en-US.json (Spanish)

* New translations en-US.json (fr-FR)

* New translations en-US.json (Spanish)

* New translations en-US.json (fr-FR)

* New translations en-US.json (Dutch)

* New translations en-US.json (Dutch)

* New translations en-US.json (Dutch)

* New translations en-US.json (Turkish)

* New translations en-US.json (Turkish)

* New translations en-US.json (zh-Hans)

* New translations en-US.json (ko-KR)

* New translations en-US.json (id-ID)

* New translations en-US.json (zh-Hant)

* New translations en-US.json (Turkish)

* New translations en-US.json (Slovak)

* New translations en-US.json (ru-RU)

* New translations en-US.json (Dutch)

* New translations en-US.json (ja-JP)

* New translations en-US.json (Portuguese, Brazilian)

* New translations en-US.json (Italian)

* New translations en-US.json (Greek)

* New translations en-US.json (de-DE)

* New translations en-US.json (Czech)

* New transla

--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -532,6 +532,7 @@
   "wallet.navigation.receive": "Empfangen",
   "wallet.navigation.send": "Senden",
   "wallet.navigation.transactions": "Transaktionen",
+  "wallet.navigation.voting": "Abstimmen",
   "wallet.nowallet.subtitle": "Bitte wähle rechts oben aus der Liste eine Wallet",
   "wallet.nowallet.title": "Keine Wallet ausgewählt",
   "wallet.problematic.explanation1": "Die ausgewählte Wallet ({checksumTextPart}) scheint ein Problem zu haben.",
@@ -713,6 +714,7 @@
   "wallet.transaction.type.multiparty": "{currency} mehrfach-Teilnehmer Transaktion",
   "wallet.transaction.withdraw": "Auszahlungen",
   "wallet.transaction.withdrawalsLabel": "Auszahlungen",
+  "wallet.transaction.transactionMetadata": "Transaktions-Metadaten",
   "wallet.transfer.cards.byron": "Byron-Ära wallet",
   "wallet.transfer.cards.shelley": "Shelley-Ära wallet",
   "wallet.transfer.deregister.deregister": "Deregistrierung",
@@ -754,5 +756,27 @@
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Generiere die Übertragungs-Transaktion",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Überprüfe den Kontostand der Adressen",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Adressen werden abgerufen",
-  "yoroiTransfer.waiting.title.label": "Die Wallet wird wieder hergestellt"
+  "yoroiTransfer.waiting.title.label": "Die Wallet wird wieder hergestellt",
+  "wallet.voting.dialog.step.confirm.line1": "Bitte gib den PIN ein, der in einem späteren Schritt zur Vervollständigung des Registrierungsprozesses in der Catalyst Anwendung verwendet wird.",
+  "wallet.voting.dialog.step.pin.line1": "Bitte notiere dir den PIN, weil er in einem späteren Schritt in der Catalyst Anwendung für den Abschluss der Registrierung verwendet wird.",
+  "wallet.voting.dialog.step.qr.lineTitle": "Benutze die Catalyst Wahl-App um den QR-code zu scannen",
+  "wallet.voting.dialog.step.qr.line2": "Der folgende QR-Code ist das generierte Zertifikat, das von der Catalyst-App benötigt wird, um am Abstimmungsprozess von Cardano teilnehmen zu können.",
+  "wallet.voting.dialog.step.qr.line3": "Wir empfehlen außerdem, einen Screenshot davon als Backup zu machen - nach dem Klicken auf \"Abschließen\" kannst Du nicht mehr auf diesen QR-Code zugreifen.",
+  "wallet.voting.dialog.step.register.line1": "Gib Dein Ausgaben-Passwort ein, um das erforderliche Zertifikat für die Abstimmung generieren zu können.",
+  "wallet.voting.lineTitle": "Alle ADA, die in der Abstimmungs-Transaktion registriert sind, werden von Ihrer aktuell ausgewählten Wallet übertragen",
+  "wallet.voting.line2": "Bevor du beginnst, schließe bitte die folgenden Schritte ab",
+  "wallet.voting.line3": "Lade die Catalyst Abstimmungs-App herunter.",
+  "wallet.voting.line4": "Öffne die Catalyst Voting App und klicke auf die Schaltfläche Registrierung abschließen.",
+  "wallet.voting.dialog.step.trx.line1": "Bestätige dein Ausgabenpasswort, um das zuvor für die Abstimmung generierte Zertifikat in der Blockchain zu registrieren.",
+  "wallet.voting.dialog.stepPin": "PIN",
+  "wallet.voting.dialog.stepConfirm": "Bestätigen",
+  "wallet.voting.dialog.registerLabel": "Registrieren",
+  "wallet.voting.dialog.transactionLabel": "Transaktion",
+  "wallet.voting.dialog.stepQrCode": "QR Code",
+  "wallet.voting.dialog.title": "Abstimmungsregistrierung",
+  "wallet.voting.dialog.confirmPin": "PIN bestätigen",
+  "wallet.voting.dialog.completeLabel": "Abschließen",
+  "global.errors.pinDoesNotMatch": "Der Pin stimmt nicht überein",
+  "global.errors.invalidPin": "Ungültiger Pin",
+  "button.buySellAda": "Kaufe/Verkaufe ADA"
 }
