--- a/app/i18n/locales/ja-JP.json
+++ b/app/i18n/locales/ja-JP.json
@@ -532,6 +532,7 @@
   "wallet.navigation.receive": "受信",
   "wallet.navigation.send": "送信",
   "wallet.navigation.transactions": "トランザクション",
+  "wallet.navigation.voting": "Voting",
   "wallet.nowallet.subtitle": "右上のドロップダウンメニューからウォレットを選択してください",
   "wallet.nowallet.title": "ウォレットが選択されていません",
   "wallet.problematic.explanation1": "The wallet you selected ({checksumTextPart}) was detected to contain some kind of issue.",
@@ -713,6 +714,7 @@
   "wallet.transaction.type.multiparty": "{currency} 複数人数トランザクション",
   "wallet.transaction.withdraw": "Withdraw",
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
+  "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transfer.cards.byron": "従来式(Byron)ウォレット",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
   "wallet.transfer.deregister.deregister": "Deregister",
@@ -754,5 +756,27 @@
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "送金トランザクションを生成しています",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "アドレスの残高を確認中",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "アドレスを取得中",
-  "yoroiTransfer.waiting.title.label": "ウォレットを復元中"
+  "yoroiTransfer.waiting.title.label": "ウォレットを復元中",
+  "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
+  "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
+  "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
+  "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
+  "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
+  "wallet.voting.dialog.step.register.line1": "Enter your spending password to be able to generate the required certificate for voting.",
+  "wallet.voting.lineTitle": "Any ADA registered in transaction to vote will be transfered from your currently selected wallet",
+  "wallet.voting.line2": "Before you begin, make sure to complete steps below",
+  "wallet.voting.line3": "Download the Catalyst Voting App.",
+  "wallet.voting.line4": "Open the Catalyst Voting App and click on the Complete registration button.",
+  "wallet.voting.dialog.step.trx.line1": "Confirm your spending password to register in the blockchain the certificate previously generated for voting.",
+  "wallet.voting.dialog.stepPin": "PIN",
+  "wallet.voting.dialog.stepConfirm": "Confirm",
+  "wallet.voting.dialog.registerLabel": "Register",
+  "wallet.voting.dialog.transactionLabel": "Transaction",
+  "wallet.voting.dialog.stepQrCode": "QR Code",
+  "wallet.voting.dialog.title": "Register for Voting",
+  "wallet.voting.dialog.confirmPin": "Confirm PIN",
+  "wallet.voting.dialog.completeLabel": "Complete",
+  "global.errors.pinDoesNotMatch": "Pin Does Not Match",
+  "global.errors.invalidPin": "Invalid Pin",
+  "button.buySellAda": "Buy/Sell ADA"
 }
