--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -532,6 +532,7 @@
   "wallet.navigation.receive": "Recibir",
   "wallet.navigation.send": "Enviar",
   "wallet.navigation.transactions": "Transacciones",
+  "wallet.navigation.voting": "Votar",
   "wallet.nowallet.subtitle": "Por favor, elige una billetera del menú desplegable ubicado en la parte superior derecha de la pantalla",
   "wallet.nowallet.title": "No has seleccionado ninguna billetera",
   "wallet.problematic.explanation1": "La billetera seleccionada ({checksumTextPart}) se detectó que posee algún tipo de problema.",
@@ -713,6 +714,7 @@
   "wallet.transaction.type.multiparty": "{currency} transacción multipartita",
   "wallet.transaction.withdraw": "Retiro",
   "wallet.transaction.withdrawalsLabel": "Retiros",
+  "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transfer.cards.byron": "Billetera de la era Byron",
   "wallet.transfer.cards.shelley": "Billetera de la era Shelley",
   "wallet.transfer.deregister.deregister": "Desregistrar",
@@ -754,5 +756,27 @@
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Generando transacción de transferencia",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Verificando los fondos de las direcciones",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Obteniendo direcciones",
-  "yoroiTransfer.waiting.title.label": "La billetera está siendo restaurada"
+  "yoroiTransfer.waiting.title.label": "La billetera está siendo restaurada",
+  "wallet.voting.dialog.step.confirm.line1": "Por favor, introduzca el PIN ya que se utilizará en un paso posterior para completar el proceso de registro dentro de la aplicación Catalyst Voting.",
+  "wallet.voting.dialog.step.pin.line1": "Anote este PIN, ya que se utilizará en un paso posterior para completar el proceso de registro dentro de la aplicación Catalyst Voting.",
+  "wallet.voting.dialog.step.qr.lineTitle": "Utilice la aplicación Catalyst Voting para escanear el código QR",
+  "wallet.voting.dialog.step.qr.line2": "El siguiente código QR es el certificado generado que requiere la Catalyst App para poder participar en el proceso de votación de Cardano.",
+  "wallet.voting.dialog.step.qr.line3": "También te sugerimos que hagas una captura de pantalla como copia de seguridad - no podrás acceder a este código QR después de hacer clic en Completar.",
+  "wallet.voting.dialog.step.register.line1": "Introduzca su contraseña de gastos para poder generar el certificado necesario para votar.",
+  "wallet.voting.lineTitle": "Cualquier ADA registrado en la transacción para votar será transferido desde tu wallet actualmente seleccionado",
+  "wallet.voting.line2": "Antes de empezar, asegúrate de completar los siguientes pasos",
+  "wallet.voting.line3": "Descarga la aplicación Catalyst Voting App.",
+  "wallet.voting.line4": "Abre la Catalyst Voting App y haz clic en el botón Completar registro.",
+  "wallet.voting.dialog.step.trx.line1": "Confirma tu contraseña de gasto para registrar en la blockchain el certificado generado previamente para la votación.",
+  "wallet.voting.dialog.stepPin": "PIN",
+  "wallet.voting.dialog.stepConfirm": "Confirmar",
+  "wallet.voting.dialog.registerLabel": "Inscribirse",
+  "wallet.voting.dialog.transactionLabel": "Transacción",
+  "wallet.voting.dialog.stepQrCode": "Código QR",
+  "wallet.voting.dialog.title": "Inscribirse para votar",
+  "wallet.voting.dialog.confirmPin": "Confirmar PIN",
+  "wallet.voting.dialog.completeLabel": "Completar",
+  "global.errors.pinDoesNotMatch": "El Pin No Corresponde",
+  "global.errors.invalidPin": "PIN inválido",
+  "button.buySellAda": "Comprar/Vender ADA"
 }
