--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -532,6 +532,7 @@
   "wallet.navigation.receive": "Ontvangen",
   "wallet.navigation.send": "Verzenden",
   "wallet.navigation.transactions": "Transacties",
+  "wallet.navigation.voting": "Stemmen",
   "wallet.nowallet.subtitle": "Kies alstublieft een Portemonnee uit de keuzelijst rechts boven",
   "wallet.nowallet.title": "Geen Portemonnee gekozen",
   "wallet.problematic.explanation1": "De portemonnee die u geselecteerd heeft: ({checksumTextPart})  bevat een probleem.",
@@ -713,6 +714,7 @@
   "wallet.transaction.type.multiparty": "{currency} meerparrijen transactie",
   "wallet.transaction.withdraw": "Opname",
   "wallet.transaction.withdrawalsLabel": "Opnames",
+  "wallet.transaction.transactionMetadata": "Transactie Metadata",
   "wallet.transfer.cards.byron": "Byron-tijdperk Portemonnee",
   "wallet.transfer.cards.shelley": "Shelley-tijdperk portemonnee",
   "wallet.transfer.deregister.deregister": "Uitschrijven",
@@ -754,5 +756,27 @@
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Genereren van een transfer transactie",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Controleren van de fondsadressen",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Ophalen van de adressen",
-  "yoroiTransfer.waiting.title.label": "De Portemonnee wordt teruggeplaatst"
+  "yoroiTransfer.waiting.title.label": "De Portemonnee wordt teruggeplaatst",
+  "wallet.voting.dialog.step.confirm.line1": "124 / 5000\nVertaalresultaten\nVoer de pincode in, aangezien deze in een latere stap zal worden gebruikt om het registratieproces in de Catalyst Stem-applicatie te voltooien.",
+  "wallet.voting.dialog.step.pin.line1": "124 / 5000\nSchrijf de pincode op en bewaar deze goed omdat deze in een latere stap zal worden gebruikt om het registratieproces in de Catalyst Stem-applicatie te voltooien.",
+  "wallet.voting.dialog.step.qr.lineTitle": "Gebruik de Catalyst Stem applicatie om de QR-code te scannen",
+  "wallet.voting.dialog.step.qr.line2": "De volgende QR-code is het certificaat (gegenereerd) dat vereist is door de Catalyst Stem applicatie om te kunnen deelnemen aan het stemproces van Cardano.",
+  "wallet.voting.dialog.step.qr.line3": "We raden aan om een screenshot van de QR-code te maken als back-up - je hebt geen toegang meer tot deze QR-code nadat je op Voltooien hebt geklikt.",
+  "wallet.voting.dialog.step.register.line1": "Voer uw bestedingswachtwoord in om het vereiste certificaat voor stemmen te kunnen genereren.",
+  "wallet.voting.lineTitle": "Elke ADA die is geregistreerd in een transactie om te stemmen, wordt overgebracht van uw, gekozen, portemonnee",
+  "wallet.voting.line2": "Zorg ervoor dat u de onderstaande stappen uitvoert voordat u begint",
+  "wallet.voting.line3": "Download de Catalyst Stem-applicatie.",
+  "wallet.voting.line4": "Open de Catalyst Stem-applicatie en klik op de knop \"Registratie voltooien\".",
+  "wallet.voting.dialog.step.trx.line1": "Bevestig uw bestedingswachtwoord om het eerder gegenereerde certificaat voor stemmen te registreren in de blockchain.",
+  "wallet.voting.dialog.stepPin": "Pincode",
+  "wallet.voting.dialog.stepConfirm": "Bevestig",
+  "wallet.voting.dialog.registerLabel": "Registreer",
+  "wallet.voting.dialog.transactionLabel": "Transactie",
+  "wallet.voting.dialog.stepQrCode": "QR-code",
+  "wallet.voting.dialog.title": "Registreer om te stemmen",
+  "wallet.voting.dialog.confirmPin": "Bevestig de pincode",
+  "wallet.voting.dialog.completeLabel": "Klaar",
+  "global.errors.pinDoesNotMatch": "Pincode niet juist",
+  "global.errors.invalidPin": "Foute pincode",
+  "button.buySellAda": "Koop/Verkoop ADA"
 }
