--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -157,12 +157,12 @@
   "noticeBoard.noNoticeText.chooseAPool": "To view notifications here, first <strong>choose a stake pool</strong> and delegate your {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "Hissenizi henüz devretmediniz.",
   "noticeBoard.notice.costChanged.subMessage": "Eski masraf {oldCost} {currency} ve yeni masraf {newCost} {currency}",
-  "noticeBoard.notice.costChanged.title": "Bahis havuzu maliyeti değişti",
+  "noticeBoard.notice.costChanged.title": "Hisse havuzu maliyeti değişti",
   "noticeBoard.notice.feeChanged.subMessage": "Eski ücret {oldFee} {currency} ve yeni ücret {newFee} {currency}",
-  "noticeBoard.notice.feeChanged.title": "Bahis havuzu ücreti değişti",
+  "noticeBoard.notice.feeChanged.title": "Hisse havuzu ücreti değişti",
   "noticeBoard.notice.noRewardForUndelegation.subMessage": "İki dönem önce her şeyden yetki vermediniz",
   "noticeBoard.notice.noRewardForUndelegation.title": "Geçtiğimiz dönem için herhangi bir ödül almadınız",
-  "noticeBoard.notice.poolToRetire.subMessage": "Ödül almaya devam etmek için bahis tutarını diğer havuza devredebilirsiniz",
+  "noticeBoard.notice.poolToRetire.subMessage": "Ödül almaya devam etmek için hisse tutarını diğer havuza devredebilirsiniz",
   "noticeBoard.notice.poolToRetire.title": "Bahis havuzu [{poolTicker}] emekli olmayı planlıyor",
   "noticeBoard.notice.rewardRecieved.subMessage": "{epochNumber} dönemi için {rewardAmount} {currency} ödülü aldınız",
   "noticeBoard.notice.rewardRecieved.title": "Ödüller alındı",
@@ -359,7 +359,7 @@
   "wallet.add.optionDialog.walletEra.byronEra.description": "29 Temmuz 2020'den önce oluşturulan cüzdanlar Byron dönemi cüzdanlarıdır ve devredilemez.",
   "wallet.add.optionDialog.walletEra.byronEra.title": "Byron dönemi (salt okunur) cüzdan",
   "wallet.add.optionDialog.walletEra.dialogTitle": "Dönem seçin",
-  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley dönemi cüzdanları, stake havuzları için delegasyonu destekler.",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley dönemi cüzdanları, hisse havuzları için delegasyonu destekler.",
   "wallet.add.optionDialog.walletEra.shelleyEra.title": "Shelley dönemi cüzdanı",
   "wallet.add.page.create.title": "Cüzdan oluştur",
   "wallet.add.page.create.tooltip": "Yeni bir 15 kelimelik kurtarma metni oluşturun <br/>ve bir Yoroi cüzdanı oluşturun.",
@@ -471,8 +471,8 @@
   "wallet.dashboard.stakePool.margins": "Paylar",
   "wallet.dashboard.stakePool.performance": "Performans",
   "wallet.dashboard.stakePool.pledge": "Taahhüt",
-  "wallet.dashboard.stakePool.stake": "Bahis",
-  "wallet.dashboard.stakePool.title": "Yetkilendirilmiş Bahis Hazuvu",
+  "wallet.dashboard.stakePool.stake": "Stake",
+  "wallet.dashboard.stakePool.title": "Yetkili Stake Havuzu",
   "wallet.dashboard.stakePool.viewWebpage": "Havuz web sayfasına gözat",
   "wallet.dashboard.summary.adaAmountNote": "This balance includes rewards (withdrawal required to be able to send this full amount)",
   "wallet.dashboard.summary.adaTitle": "Toplam {ticker}",
@@ -502,7 +502,7 @@
   "wallet.delegation.transaction.explanationLine3": "Yetkilendirmenizi istediğiniz zaman iptal edebilirsiniz",
   "wallet.delegation.transaction.generation": "İşlem oluşturuluyor",
   "wallet.delegation.transaction.stakePoolHash": "Stake havuzu kimliği",
-  "wallet.delegation.transaction.stakePoolName": "Hisse havuzu adı",
+  "wallet.delegation.transaction.stakePoolName": "Stake havuzu adı",
   "wallet.delegation.transaction.success.button.label": "Panel sayfası",
   "wallet.delegation.transaction.success.explanation": "Bahis havuzunun durumunu ve Gösterge Tablosu sayfasından bir ödül almak için kalan süreyi izleyiniz",
   "wallet.delegation.transaction.success.title": "Başarıyla yetkilendirildi",
@@ -532,6 +532,7 @@
   "wallet.navigation.receive": "Al",
   "wallet.navigation.send": "Gönder",
   "wallet.navigation.transactions": "İşlemler",
+  "wallet.navigation.voting": "Oylama",
   "wallet.nowallet.subtitle": "Lütfen sağ-üst açılır menüden bir cüzdan seçin",
   "wallet.nowallet.title": "Cüzdan seçilmedi",
   "wallet.problematic.explanation1": "The wallet you selected ({checksumTextPart}) was detected to contain some kind of issue.",
@@ -684,7 +685,7 @@
   "wallet.transaction.certificate.PoolRegistration": "Havuz kayıt",
   "wallet.transaction.certificate.PoolRetirement": "Havuz emekliliği",
   "wallet.transaction.certificate.PoolUpdate": "Havuz güncellemesi",
-  "wallet.transaction.certificate.StakeDelegation": "Bahis heyeti",
+  "wallet.transaction.certificate.StakeDelegation": "Hisse heyeti",
   "wallet.transaction.certificate.StakeDeregistration": "Stake anahtar kaydı silme",
   "wallet.transaction.certificate.StakeRegistration": "Stake anahtarı kaydı",
   "wallet.transaction.certificateLabel": "Sertifika",
@@ -713,6 +714,7 @@
   "wallet.transaction.type.multiparty": "{currency} çok parçalı işlem",
   "wallet.transaction.withdraw": "Çekim",
   "wallet.transaction.withdrawalsLabel": "Çekim",
+  "wallet.transaction.transactionMetadata": "İşlem Metaverisi",
   "wallet.transfer.cards.byron": "Byron-era cüzdan",
   "wallet.transfer.cards.shelley": "Shelley-era cüzdan",
   "wallet.transfer.deregister.deregister": "Kaydı iptal et",
@@ -754,5 +756,27 @@
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Transfer işlemi oluşturuluyor",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Adreslerdeki para kontrol ediliyor",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Adresler getiriliyor",
-  "yoroiTransfer.waiting.title.label": "Cüzdan geri yükleniyor"
+  "yoroiTransfer.waiting.title.label": "Cüzdan geri yükleniyor",
+  "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
+  "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
+  "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
+  "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
+  "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
+  "wallet.voting.dialog.step.register.line1": "Enter your spending password to be able to generate the required certificate for voting.",
+  "wallet.voting.lineTitle": "Any ADA registered in transaction to vote will be transfered from your currently selected wallet",
+  "wallet.voting.line2": "Before you begin, make sure to complete steps below",
+  "wallet.voting.line3": "Download the Catalyst Voting App.",
+  "wallet.voting.line4": "Open the Catalyst Voting App and click on the Complete registration button.",
+  "wallet.voting.dialog.step.trx.line1": "Confirm your spending password to register in the blockchain the certificate previously generated for voting.",
+  "wallet.voting.dialog.stepPin": "PİN",
+  "wallet.voting.dialog.stepConfirm": "Onayla",
+  "wallet.voting.dialog.registerLabel": "Kaydet",
+  "wallet.voting.dialog.transactionLabel": "İşlem",
+  "wallet.voting.dialog.stepQrCode": "Kare Kod",
+  "wallet.voting.dialog.title": "Oy için kaydet",
+  "wallet.voting.dialog.confirmPin": "PİN'İ Onayla",
+  "wallet.voting.dialog.completeLabel": "Tamamla",
+  "global.errors.pinDoesNotMatch": "Pin eşleşmiyor",
+  "global.errors.invalidPin": "Geçersiz Pin",
+  "button.buySellAda": "Al/Sat ADA"
 }
