--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -757,13 +757,13 @@
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Checking addresses funds",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Fetching addresses",
   "yoroiTransfer.waiting.title.label": "Wallet is being restored",
-  "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
-  "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as it will be used in a later step to complete the registration process inside the Catalyst Voting App.",
+  "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
+  "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
   "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
   "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
   "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
   "wallet.voting.dialog.step.register.line1": "Enter your spending password to be able to generate the required certificate for voting.",
-  "wallet.voting.lineTitle": "Any ADA registered in transaction to vote will be transfered from your currently selected wallet",
+  "wallet.voting.lineTitle": "Register to vote on Fund 3",
   "wallet.voting.line2": "Before you begin, make sure to complete steps below",
   "wallet.voting.line3": "Download the Catalyst Voting App.",
   "wallet.voting.line4": "Open the Catalyst Voting App and click on the Complete registration button.",
