--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -519,6 +519,8 @@
   "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
   "wallet.includeKey.withKeyLabel": "With key",
   "wallet.includeKey.withoutKeyLabel": "Without key",
+  "wallet.insufficientFunds.subtitle": "Participating requires at least {requiredBalance} {tokenName}, but you only have {currentBalance}. Unwithdrawn rewards are not included in this amount",
+  "wallet.insufficientFunds.title": "Insufficient funds",
   "wallet.nav.addButton": "Add new wallet",
   "wallet.nav.allWalletsLabel": "All wallets",
   "wallet.nav.backButton": "Back to my wallets",
