Revert "add buy sell ada button (#1898)"
This reverts commit b6423d6b29e13d4d8290c6925239dc65a9b31198.

--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -779,6 +779,5 @@
   "wallet.voting.dialog.confirmPin": "Confirm PIN",
   "wallet.voting.dialog.completeLabel": "Complete",
   "global.errors.pinDoesNotMatch": "Pin Does Not Match",
-  "global.errors.invalidPin": "Invalid Pin",
-  "button.buySellAda": "Buy/Sell ADA"
+  "global.errors.invalidPin": "Invalid Pin"
 }
