--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -47,7 +47,11 @@
   "app.errors.unableToLoad": "Unable to load!",
   "app.errors.unexpectedError": "Something unexpected happened. Please retry.",
   "app.errors.unknowError": "Unknown error.",
-  "button.buySellAda": "Buy/Sell ADA",
+  "button.buySellAda": "Buy / Sell ADA",
+  "buysell.dialog.instructions": "Please select your preferences. On the next screen, confirm your selection by pressing the green arrow on the top right",
+  "buysell.dialog.manual": "I will add my address manually",
+  "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
+  "buysell.dialog.title": "Buy / Sell ADA",
   "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "There is no transaction to be sent.",
   "daedalusTransfer.error.transferFundsError": "Unable to transfer funds.",
